Include xml report.

--- a/api/build.gradle
+++ b/api/build.gradle
@@ -263,6 +263,9 @@ jacoco {
 
 jacocoTestReport {
     getExecutionData().setFrom(fileTree(buildDir).include("/jacoco/*.exec"))
+    reports {
+        xml.enabled = true
+    }
 }
 
 // The plugin generates configuration names by concatenating SourceSet names
