Enable FF in prod

--- a/api/config/config_prod.json
+++ b/api/config/config_prod.json
@@ -92,7 +92,7 @@
   },
   "absorb": {
     "externalDepartmentId": "Researchers",
-    "externalDepartmentIdPopulatedForNewUsers": false,
+    "externalDepartmentIdPopulatedForNewUsers": true,
     "enabledForNewUsers": false,
     "rtTrainingCourseId": "TODO",
     "ctTrainingCourseId": "TODO",
