--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -376,6 +376,11 @@ jobs:
                   GRADLE_ARGS=$(echo $CLASSNAMES | awk '{for (i=1; i<=NF; i++) print "--tests", $i }')
                   gradle :test $GRADLE_ARGS
             - run:
+                name: Rename Jacoco exec file
+                working_directory: ~/workbench/api
+                command: |
+                  mv "./build/jacoco/test.exec" "./build/jacoco/test_$CIRCLE_NODE_INDEX.exec"
+            - run:
                 name: Lint Java code
                 working_directory: ~/workbench/api
                 command: |
@@ -386,6 +391,32 @@ jobs:
           root: .
           paths:
             - api
+
+  api-test-coverage:
+    #Jacoco runs against test results to get test coverage
+    executor: workbench-executor
+    steps:
+      - run-api-test:
+          additional_steps:
+            - attach_workspace:
+                  at: /tmp/workspace
+            - run:
+                name: Create build directory
+                working_directory: ~/workbench/api
+                command: |
+                  mkdir "./build";
+            - run:
+                name: Copy Jacoco exec files locally
+                working_directory: ~/workbench/api
+                command: |
+                  cp -R "/tmp/workspace/api/build/jacoco/" "./build/jacoco/"
+            - run:
+                name: Generate Jacoco Coverage Report
+                working_directory: ~/workbench/api
+                command: |
+                  ./gradlew jacocoTestReport
+            - store_artifacts:
+                path: ~/workbench/api/build/reports
 
   api-local-test:
     # The local API server starts two Java processes (the API server and the cron emulator).
@@ -763,6 +794,9 @@ workflows:
       - ui-unit-test
       - api-bigquery-test
       - api-integration-test
+      - api-test-coverage:
+          requires:
+          - api-unit-test
       # Deploy to "test" on main branch merges
       - api-deploy-to-test:
           <<: *filter-main-branch
