--- a/api/build.gradle
+++ b/api/build.gradle
@@ -53,6 +53,7 @@ plugins {
     id 'org.hidetake.swagger.generator' version '2.19.2'
     id 'org.owasp.dependencycheck' version '8.3.1'
     id 'org.springframework.boot' version '2.7.4'
+    id 'jacoco'
 }
 
 if (JavaVersion.current() != JavaVersion.VERSION_11) {
@@ -254,6 +255,17 @@ test {
     // Circle because they are already split apart using a different algorithm.
     maxParallelForks = System.getenv('CIRCLECI') == 'true' ? 1 :
       Runtime.runtime.availableProcessors().intdiv(2) ?: 1
+}
+
+jacoco {
+    toolVersion = "0.8.10"
+}
+
+jacocoTestReport {
+    getExecutionData().setFrom(fileTree(buildDir).include("/jacoco/*.exec"))
+    reports {
+        xml.enabled = true
+    }
 }
 
 // The plugin generates configuration names by concatenating SourceSet names
