--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -432,22 +432,17 @@ jobs:
                 command: |
                   ls build/reports
             - run:
-                name: ls build/reports/JunitTestResult
+                name: ls build/reports/jacoco
                 working_directory: ~/workbench/api
                 command: |
-                  ls build/reports/JunitTestResult
+                  ls build/reports/jacoco
             - run:
-                name: ls build/reports/JunitTestResult/jacoco
+                name: ls build/reports/jacoco/test
                 working_directory: ~/workbench/api
                 command: |
-                  ls build/reports/JunitTestResult/jacoco
-            - run:
-                name: ls build/reports/JunitTestResult/jacoco/test
-                working_directory: ~/workbench/api
-                command: |
-                  ls build/reports/JunitTestResult/jacoco/test
+                  ls build/reports/jacoco/test
             - coverage-reporter/send_report:
-                coverage-reports: ./build/reports/JunitTestResult/jacoco/test/jacocoTestReport.xml
+                coverage-reports: ./build/reports/jacoco/test/jacocoTestReport.xml
                 project-token: $CODACY_PROJECT_TOKEN
             - store_artifacts:
                 path: ~/workbench/api/build/reports
