--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -442,7 +442,7 @@ jobs:
                 command: |
                   ls build/reports/jacoco/test
             - coverage-reporter/send_report:
-                coverage-reports: ./build/reports/jacoco/test/jacocoTestReport.xml
+                coverage-reports: api/build/reports/jacoco/test/jacocoTestReport.xml
                 project-token: $CODACY_PROJECT_TOKEN
             - store_artifacts:
                 path: ~/workbench/api/build/reports
