--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -407,9 +407,17 @@ jobs:
           command: |
             ls -la /tmp
       - run:
-          name: What is in tmp directory
+          name: What is in workspace directory
           command: |
             ls -la /tmp/workspace
+      - run:
+          name: What is in ui directory
+          command: |
+            ls -la /tmp/workspace/ui
+      - run:
+          name: What is in coverage directory
+          command: |
+            ls -la /tmp/workspace/ui/coverage
       - run:
           name: What is in ~ directory
           command: |
