Addign UI coverage report to CircleCI.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -399,6 +399,8 @@ jobs:
     steps:
       - attach_workspace:
             at: /tmp/workspace
+      - store_artifacts:
+          path: /tmp/workspace/ui/coverage/locov-report
       - coverage-reporter/send_report:
           coverage-reports: /tmp/workspace/ui/coverage/lcov.info
           project-token: $CODACY_PROJECT_TOKEN
