--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -402,7 +402,7 @@ jobs:
       - store_artifacts:
           path: /tmp/workspace/ui/coverage/lcov-report
       - coverage-reporter/send_report:
-          coverage-reports: /tmp/workspace/ui/coverage/lcov.info,
+          coverage-reports: /tmp/workspace/ui/coverage/lcov.info
           project-token: $CODACY_PROJECT_TOKEN
 
   api-test-coverage:
