Ignore terraui when generating coverage.

--- a/ui/package.json
+++ b/ui/package.json
@@ -121,6 +121,9 @@
   },
   "jest": {
     "collectCoverage": true,
+    "coveragePathIgnorePatterns": [
+      "src/terraui"
+    ],
     "coverageReporters": [
       "lcov",
       "text",
