--- a/api/build.gradle
+++ b/api/build.gradle
@@ -830,6 +830,14 @@ task deleteWorkspaces(type: JavaExec) {
         args Eval.me(appArgs)
     }
 }
+
+task backfillGSuiteUserData(type: JavaExec) {
+    classpath = sourceSets.__tools__.runtimeClasspath
+    mainClass = "org.pmiops.workbench.tools.BackfillGSuiteUserData"
+    if (project.hasProperty("appArgs")) {
+        args Eval.me(appArgs)
+    }
+}
 //
 // Kotlin Plugin compiler arguments
 // https://kotlinlang.org/docs/reference/using-gradle.html#compiler-options
