--- a/ui/package.json
+++ b/ui/package.json
@@ -15,10 +15,11 @@
     "test:debug": "react-app-rewired --inspect-brk test --watchAll=false --run-in-band",
     "test": "react-app-rewired test --watchAll=false",
     "lint": "yarn eslint src --ext .ts,.tsx",
-    "codegen": "yarn run codegen-clean && yarn run codegen-swagger && yarn run notebooks-codegen-swagger",
-    "codegen-clean": "rm -rf src/generated src/notebooks-generated",
+    "codegen": "yarn run codegen-clean && yarn run codegen-swagger && yarn run notebooks-codegen-swagger && yarn run tanagra-codegen-openapi",
+    "codegen-clean": "rm -rf src/generated src/notebooks-generated src/tanagra-generated",
     "codegen-swagger": "openapi-generator-cli generate -i ../api/src/main/resources/workbench-api.yaml -g typescript-fetch -p generateAliasAsModel=true --template-dir src/assets/generation --additional-properties=typeScriptThreePlus=true,enumPropertyNaming=UPPERCASE,useSingleRequestParameter=false,prefixParameterInterfaces=true -o src/generated/fetch",
-    "notebooks-codegen-swagger": "java -jar ../aou-utils/swagger-codegen-cli.jar generate --lang typescript-fetch --input-spec ../api/src/main/resources/notebooks.yaml --output src/notebooks-generated/fetch"
+    "notebooks-codegen-swagger": "java -jar ../aou-utils/swagger-codegen-cli.jar generate --lang typescript-fetch --input-spec ../api/src/main/resources/notebooks.yaml --output src/notebooks-generated/fetch",
+    "tanagra-codegen-openapi": "openapi-generator-cli generate -i ../tanagra-aou-utils/tanagra/service/src/main/resources/api/service_openapi.yaml -g typescript-fetch --additional-properties=typescriptThreePlus=true -o src/tanagra-generated"
   },
   "browserslist": [
     "chrome >= 67"
