--- a/api/config/config_staging.json
+++ b/api/config/config_staging.json
@@ -145,7 +145,8 @@
   },
   "reporting": {
     "dataset": "reporting_staging",
-    "maxRowsPerInsert": 500
+    "maxRowsPerInsert": 500,
+    "exportTerraDataWarehouse": false
   },
   "ras": {
     "host": "https:\/\/sts.nih.gov",
