--- a/api/config/config_prod.json
+++ b/api/config/config_prod.json
@@ -151,8 +151,8 @@
     "dataset": "reporting_test",
     "maxRowsPerInsert": 500,
     "exportTerraDataWarehouse": true,
-    "terraWarehouseLeoAppTableId": "broad-dsde-prod-analytics-dev.warehouse.leonardo_app_usage",
-    "terraWarehouseLeoAppUsageTableId": "broad-dsde-prod-analytics-dev.warehouse.leonardo_app"
+    "terraWarehouseLeoAppTableId": "broad-dsde-prod-analytics-dev.warehouse.leonardo_app",
+    "terraWarehouseLeoAppUsageTableId": "broad-dsde-prod-analytics-dev.warehouse.leonardo_app_usage"
   },
   "ras": {
     "host": "https:\/\/sts.nih.gov",
