--- a/api/config/config_prod.json
+++ b/api/config/config_prod.json
@@ -148,8 +148,11 @@
     "useTestCaptcha": false
   },
   "reporting": {
-    "dataset": "reporting_prod",
-    "maxRowsPerInsert": 500
+    "dataset": "reporting_test",
+    "maxRowsPerInsert": 500,
+    "exportTerraDataWarehouse": true,
+    "terraWarehouseLeoAppTableId": "broad-dsde-prod-analytics-dev.warehouse.leonardo_app",
+    "terraWarehouseLeoAppUsageTableId": "broad-dsde-prod-analytics-dev.warehouse.leonardo_app_usage"
   },
   "ras": {
     "host": "https:\/\/sts.nih.gov",
