DT-549 adding tanagra deps

--- a/ui/package.json
+++ b/ui/package.json
@@ -4,12 +4,12 @@
   "license": "BSD",
   "scripts": {
     "build-terra-deps": "./src/terraui/build.sh",
-    "deps": "yarn run codegen && yarn run build-terra-deps",
+    "deps": "./src/deps/deps.sh",
     "start": "BROWSER='none' PORT=4200 react-app-rewired start",
     "start-tanagra": "BROWSER='none' REACT_APP_POST_MESSAGE_ORIGIN=http://localhost:4200 npm start --prefix ../tanagra-aou-utils/tanagra/ui",
-    "dev-up": "yarn && yarn run deps && yarn start",
-    "dev-up-test": "yarn && yarn run deps && REACT_APP_ENVIRONMENT=localtest yarn start",
-    "dev-up-local": "yarn && yarn run deps && REACT_APP_ENVIRONMENT=local yarn start",
+    "dev-up": "yarn && yarn run deps test && yarn start",
+    "dev-up-test": "yarn && yarn run deps test && REACT_APP_ENVIRONMENT=localtest yarn start",
+    "dev-up-local": "yarn && yarn run deps local && REACT_APP_ENVIRONMENT=local yarn start",
     "dev-up-tanagra-local": "./src/tanagra-ui/dev-up-tanagra-local.sh",
     "build": "react-app-rewired build",
     "test:debug": "react-app-rewired --inspect-brk test --watchAll=false --run-in-band",
