turned on enableHasEhrData in staging, stable and preprod envs

--- a/api/config/config_preprod.json
+++ b/api/config/config_preprod.json
@@ -126,7 +126,7 @@
     "enableRStudioGKEApp": true,
     "enableSasGKEApp": false,
     "enableDataExplorer": false,
-    "enableHasEhrData": false
+    "enableHasEhrData": true
   },
   "actionAudit": {
     "logName": "workbench-action-audit-preprod",
