--- a/api/config/config_stable.json
+++ b/api/config/config_stable.json
@@ -126,7 +126,7 @@
     "enableRStudioGKEApp": false,
     "enableSasGKEApp": false,
     "enableDataExplorer": false,
-    "enableHasEhrData": false
+    "enableHasEhrData": true
   },
   "actionAudit": {
     "logName": "workbench-action-audit-stable",
