--- a/api/config/config_preprod.json
+++ b/api/config/config_preprod.json
@@ -107,7 +107,7 @@
     "unsafeAllowUserCreationFromGSuiteData": false,
     "enableRasIdMeLinking": false,
     "enableRasLoginGovLinking": false,
-    "currentDuccVersions": [3, 4, 5],
+    "currentDuccVersions": [3, 4, 5, 6],
     "renewal": {
       "expiryDays": 3650,
       "expiryDaysWarningThresholds": [1, 7, 15],
