--- a/api/config/config_stable.json
+++ b/api/config/config_stable.json
@@ -107,7 +107,7 @@
     "unsafeAllowUserCreationFromGSuiteData": false,
     "enableRasIdMeLinking": false,
     "enableRasLoginGovLinking": true,
-    "currentDuccVersions": [3, 4, 5],
+    "currentDuccVersions": [3, 4, 5, 6],
     "renewal": {
       "expiryDays": 365,
       "expiryDaysWarningThresholds": [1, 7, 15],
