--- a/api/.swagger3-codegen-ignore
+++ b/api/.swagger3-codegen-ignore
@@ -44,4 +44,4 @@ build/swagger3/gradle
 build/swagger3/gradle/**
 # This gets rid of files related to swagger API documentation.
 # If we find a flag that handles this better, please remove this.
-#build/swagger3/io/swagger/**
+build/swagger3/io/swagger/**
