--- a/api/src/main/resources/workbench-api.yaml
+++ b/api/src/main/resources/workbench-api.yaml
@@ -3759,7 +3759,7 @@ paths:
         content:
           '*/*':
             schema:
-              $ref: '#/components/schemas/ResourceType'
+              $ref: '#/components/schemas/ResourceTypeRequest'
         required: true
       responses:
         200:
@@ -3768,7 +3768,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/DataSetListResponse'
-      x-codegen-request-body-name: resourceType
+      x-codegen-request-body-name: ResourceTypeRequest
   /v1/{cdrVersionId}/dataDictionaryEntry/{domain}/{value}:
     get:
       tags:
@@ -7764,6 +7764,11 @@ components:
         id:
           type: integer
           format: int64
+        resourceType:
+          $ref: '#/components/schemas/ResourceType'
+    ResourceTypeRequest:
+      type: object
+      properties:
         resourceType:
           $ref: '#/components/schemas/ResourceType'
     ResourceType:
