Enable Absorb for new users in prod

--- a/api/config/config_preprod.json
+++ b/api/config/config_preprod.json
@@ -92,7 +92,7 @@
   },
   "absorb": {
     "externalDepartmentId": "Researchers",
-    "enabledForNewUsers": false,
+    "enabledForNewUsers": true,
     "samlIdentityProviderId": "C02celxus",
     "samlServiceProviderId": "638082479253"
   },
