--- a/ui/.npmrc
+++ b/ui/.npmrc
@@ -1,2 +1,3 @@
+@fortawesome:registry=https://registry.yarnpkg.com/
 @terra-ui-packages:registry=https://us-central1-npm.pkg.dev/dsp-artifact-registry/terra-ui-packages
 
