[risk=low][no ticket] Remove all npmrc / Font Awesome logic from UI builds (#8101)
* use registry.yarnpkg.com for fortawesome
* add .npmrc comments

--- a/ui/.npmrc
+++ b/ui/.npmrc
@@ -1,3 +1,8 @@
-@fortawesome:registry=https://npm.fontawesome.com/
+# we previously set this value to https://npm.fontawesome.com/ in order to access Font Awesome Pro packages with our auth token
+# unfortunately, simply removing this setting can cause 401/Unauthorized errors under some scenarios (unclear when) for the Free packages we continue to use
+# we can avoid this by forcing the use of our standard registry   
+@fortawesome:registry=https://registry.yarnpkg.com/
+
+# Include packages from https://github.com/DataBiosphere/terra-ui
 @terra-ui-packages:registry=https://us-central1-npm.pkg.dev/dsp-artifact-registry/terra-ui-packages
 
