--- a/api/config/config_staging.json
+++ b/api/config/config_staging.json
@@ -122,7 +122,7 @@
     "enablePrivateDataprocWorker": true,
     "ccSupportWhenAdminLocking": false,
     "enableRStudioGKEApp": true,
-    "enableSasGKEApp": false,
+    "enableSasGKEApp": true,
     "enableDataExplorer": false,
     "enableHasEhrData": true
   },
