--- a/ui/package.json
+++ b/ui/package.json
@@ -110,6 +110,8 @@
     "url": "^0.11.0"
   },
   "resolutions": {
+    "@types/react": "^17",
+    "@types/react-dom": "^17",
     "node-fetch": "^2.6.7",
     "nth-check": "^2.0.1",
     "postcss": "^8.4.31",
