--- a/ui/package.json
+++ b/ui/package.json
@@ -48,8 +48,8 @@
     "@webcomponents/custom-elements": "^1.0.0",
     "classnames": "^2.2.6",
     "color": "^3.1.1",
-    "highcharts": "^9.0.0",
-    "highcharts-react-official": "3.0.0",
+    "highcharts": "^9.3.3",
+    "highcharts-react-official": "^3.2.1",
     "js-cookie": "^2.2.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
