--- a/api/src/main/resources/workbench-api.yaml
+++ b/api/src/main/resources/workbench-api.yaml
@@ -4322,7 +4322,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/UserWorkspaceBQCostRequest'
+              $ref: '#/components/schemas/UseridList'
         required: true
       responses:
         200:
@@ -11377,27 +11377,11 @@ components:
           items:
             type: integer
             format: int64
-    UserWorkspaceBQCostRequest:
-      type: object
-      properties:
-        userCostList:
-          type: array
-          description: List of users return from cloud task
-          items:
-            $ref: '#/components/schemas/UserBQCost'
-    UserBQCost:
-      type: object
-      properties:
-        userId:
-          description: user id
-          type: integer
-          format: int64
-        workspaceBQCost:
-          description: Map with google project key and cost as value
-          type: object
-          additionalProperties:
-            type: number
-            format: double
+    UseridList:
+      type: array
+      items:
+        type: integer
+        format: int64
     ProcessEgressEventRequest:
       required:
       - eventId
