--- a/e2e/package.json
+++ b/e2e/package.json
@@ -81,6 +81,7 @@
     "winston": "^3.3.3"
   },
   "resolutions": {
+    "axios": "^1.6.0",
     "semver": "^7.5.2",
     "word-wrap": "aashutoshrathi/word-wrap"
   }
