--- a/api/config/config_prod.json
+++ b/api/config/config_prod.json
@@ -123,7 +123,8 @@
     "enableRStudioGKEApp": false,
     "enableSasGKEApp": false,
     "enableDataExplorer": false,
-    "enableHasEhrData": false
+    "enableHasEhrData": false,
+    "enableAppPausing": false
   },
   "actionAudit": {
     "logName": "workbench-action-audit-prod",
