--- a/api/config/config_stable.json
+++ b/api/config/config_stable.json
@@ -123,7 +123,8 @@
     "enableRStudioGKEApp": false,
     "enableSasGKEApp": false,
     "enableDataExplorer": false,
-    "enableHasEhrData": true
+    "enableHasEhrData": true,
+    "enableAppPausing": false
   },
   "actionAudit": {
     "logName": "workbench-action-audit-stable",
