--- a/api/config/config_stable.json
+++ b/api/config/config_stable.json
@@ -121,7 +121,7 @@
     "enablePrivateDataprocWorker": true,
     "ccSupportWhenAdminLocking": false,
     "enableRStudioGKEApp": false,
-    "enableSasGKEApp": false,
+    "enableSasGKEApp": true,
     "enableDataExplorer": false,
     "enableHasEhrData": true
   },
