--- a/e2ev2/package.json
+++ b/e2ev2/package.json
@@ -8,10 +8,10 @@
   "author": "AoURWB Team",
   "license": "MIT",
   "devDependencies": {
-    "jest": "29.2.2",
-    "jest-silent-reporter": "0.5.0",
-    "jsonwebtoken": "9.0.0",
-    "puppeteer-core": "19.2.0"
+    "jest": "^29.4.2",
+    "jest-silent-reporter": "^0.5.0",
+    "jsonwebtoken": "^9.0.0",
+    "puppeteer-core": "^21.5.1"
   },
   "resolutions": {
     "semver": "^7.5.2"
