--- a/api/config/config_prod.json
+++ b/api/config/config_prod.json
@@ -124,7 +124,7 @@
     "enableRStudioGKEApp": false,
     "enableSasGKEApp": false,
     "enableDataExplorer": false,
-    "enableHasEhrData": false
+    "enableHasEhrData": true
   },
   "actionAudit": {
     "logName": "workbench-action-audit-prod",
