Update feature flag from enableAppPausing to enableGKEAppPausing.

--- a/api/config/config_local.json
+++ b/api/config/config_local.json
@@ -124,7 +124,7 @@
     "enableSasGKEApp": true,
     "enableDataExplorer": true,
     "enableHasEhrData": true,
-    "enableAppPausing": true
+    "enableGKEAppPausing": true
   },
   "actionAudit": {
     "logName": "workbench-action-audit-local",
