--- a/api/config/config_stable.json
+++ b/api/config/config_stable.json
@@ -124,7 +124,7 @@
     "enableSasGKEApp": true,
     "enableDataExplorer": false,
     "enableHasEhrData": true,
-    "enableAppPausing": false
+    "enableGKEAppPausing": false
   },
   "actionAudit": {
     "logName": "workbench-action-audit-stable",
