--- a/api/config/config_local.json
+++ b/api/config/config_local.json
@@ -123,7 +123,8 @@
     "enableRStudioGKEApp": true,
     "enableSasGKEApp": true,
     "enableDataExplorer": true,
-    "enableHasEhrData": true
+    "enableHasEhrData": true,
+    "enableGKEAppPausing": true
   },
   "actionAudit": {
     "logName": "workbench-action-audit-local",
