--- a/api/config/config_preprod.json
+++ b/api/config/config_preprod.json
@@ -123,7 +123,8 @@
     "enableRStudioGKEApp": true,
     "enableSasGKEApp": true,
     "enableDataExplorer": false,
-    "enableHasEhrData": true
+    "enableHasEhrData": true,
+    "enableGKEAppPausing": false
   },
   "actionAudit": {
     "logName": "workbench-action-audit-preprod",
