Basic structure of a contract test.

--- a/api/build.gradle
+++ b/api/build.gradle
@@ -543,8 +543,6 @@ dependencies {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
         exclude group: 'com.vaadin.external.google', module: 'android-json'
     }
-
-    implementation 'au.com.dius:pact-jvm-consumer-junit5:4.0.10'
 }
 
 tasks.compileJava {
@@ -861,9 +859,7 @@ compileTestKotlin {
 }
 
 dependencies {
-  implementation 'au.com.dius:pact-jvm-consumer-junit5_2.12:3.6.15'
-    implementation 'au.com.dius:pact-jvm-consumer-junit5_2.11:3.5.24'
-    implementation 'au.com.dius:pact-jvm-consumer-junit5:4.0.10'
+    implementation 'au.com.dius:pact-jvm-consumer-java8:4.0.10'
     implementation 'au.com.dius:pact-jvm-consumer-junit5:4.0.10'
     modules {
     module("com.sun.activation:jakarta.activation") {
