DT-638 add url property to config object

--- a/api/config/config_preprod.json
+++ b/api/config/config_preprod.json
@@ -159,6 +159,7 @@
     "latestAouVersion": 1
   },
   "tanagra": {
-    "baseUrl": "https:\/\/aou-tanagra.dev.pmi-ops.org"
+    "baseUrl": "https:\/\/aou-tanagra-dev.fake-research-aou.org",
+    "workbenchBaseUrl": "https:\/\/test.fake-research-aou.org"
   }
 }
