--- a/api/config/config_staging.json
+++ b/api/config/config_staging.json
@@ -182,6 +182,7 @@
     "latestAouVersion": 1
   },
   "tanagra": {
-    "baseUrl": "https:\/\/aou-tanagra.dev.pmi-ops.org"
+    "baseUrl": "https:\/\/aou-tanagra-dev.fake-research-aou.org",
+    "workbenchBaseUrl": "https:\/\/test.fake-research-aou.org"
   }
 }
