--- a/ui/package.json
+++ b/ui/package.json
@@ -34,7 +34,7 @@
     "@openapitools/openapi-generator-cli": "^2.7.0",
     "@terra-ui-packages/components": "0.0.4",
     "@terra-ui-packages/core-utils": "0.0.6",
-    "@types/color": "^3.0.2",
+    "@types/color": "^3.0.5",
     "@types/enzyme": "^3.10.15",
     "@types/jest": "^27.5.1",
     "@types/js-cookie": "^2.2.2",
@@ -42,8 +42,8 @@
     "@types/node": "^10.12.11",
     "@types/react": "^17",
     "@types/react-dom": "^17",
-    "@types/react-modal": "^3.13.1",
-    "@types/react-onclickoutside": "^6.7.0",
+    "@types/react-modal": "^3.16.1",
+    "@types/react-onclickoutside": "^6.7.6",
     "@types/react-router-dom": "^5.3.2",
     "@webcomponents/custom-elements": "^1.0.0",
     "classnames": "^2.2.6",
@@ -59,12 +59,12 @@
     "outdated-browser-rework": "^2.8.0",
     "portable-fetch": "^3.0.0",
     "primeicons": "^5.0.0",
-    "primereact": "^9.0.0",
+    "primereact": "^9.6.3",
     "querystring-es3": "^0.2.1",
     "react": "^17",
     "react-calendar": "^2.18.1",
     "react-dom": "^17",
-    "react-google-recaptcha": "2.0.1",
+    "react-google-recaptcha": "^2.1.0",
     "react-iframe": "^1.8.0",
     "react-interactive": "^0.9.1",
     "react-modal": "^3.16.1",
